Fixes mobile spacing on homepage.

--- a/source/styles/scss/pages/_home.scss
+++ b/source/styles/scss/pages/_home.scss
@@ -400,7 +400,7 @@
 
             @media (max-width: $screen-sm-max ) {
 
-                margin-bottom: 120px;
+                margin-bottom: 60px;
             }
 
             img {
